# super-simple-sat

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
cnf/uf100-430/sat/: uf100-001.cnf  uf100-002.cnf  uf100-003.cnf  uf100-004.cnf  uf100-005.cnf  uf100-006.cnf  uf100-007.cnf  uf100-008.cnf  uf100-009.cnf  uf100-010.cnf  uf100-011.cnf  uf100-012.cnf  uf100-013.cnf  uf100-014.cnf  uf100-015.cnf  uf100-016.cnf  uf100-017.cnf  uf100-018.cnf  uf100-019.cnf  uf100-020.cnf  uf100-021.cnf  uf100-022.cnf  uf100-023.cnf  uf100-024.cnf  uf100-025.cnf  uf100-026.cnf  uf100-027.cnf  uf100-028.cnf  uf100-029.cnf  uf100-030.cnf
cnf/uf100-430/unsat/: uuf100-001.cnf  uuf100-002.cnf  uuf100-003.cnf  uuf100-004.cnf  uuf100-005.cnf  uuf100-006.cnf  uuf100-007.cnf  uuf100-008.cnf  uuf100-009.cnf  uuf100-010.cnf  uuf100-011.cnf  uuf100-012.cnf  uuf100-013.cnf  uuf100-014.cnf  uuf100-015.cnf  uuf100-016.cnf  uuf100-017.cnf  uuf100-018.cnf  uuf100-019.cnf  uuf100-020.cnf  uuf100-021.cnf  uuf100-022.cnf  uuf100-023.cnf  uuf100-024.cnf  uuf100-025.cnf  uuf100-026.cnf  uuf100-027.cnf  uuf100-028.cnf  uuf100-029.cnf  uuf100-030.cnf
cnf/uf150-645/sat/: uf150-001.cnf  uf150-002.cnf  uf150-003.cnf  uf150-004.cnf  uf150-005.cnf  uf150-006.cnf  uf150-007.cnf  uf150-008.cnf  uf150-009.cnf  uf150-010.cnf  uf150-011.cnf  uf150-012.cnf  uf150-013.cnf  uf150-014.cnf  uf150-015.cnf  uf150-016.cnf  uf150-017.cnf  uf150-018.cnf  uf150-019.cnf  uf150-020.cnf  uf150-021.cnf  uf150-022.cnf  uf150-023.cnf  uf150-024.cnf  uf150-025.cnf  uf150-026.cnf  uf150-027.cnf  uf150-028.cnf  uf150-029.cnf  uf150-030.cnf
cnf/uf150-645/unsat/: uuf150-001.cnf  uuf150-002.cnf  uuf150-003.cnf  uuf150-004.cnf  uuf150-005.cnf  uuf150-006.cnf  uuf150-007.cnf  uuf150-008.cnf  uuf150-009.cnf  uuf150-010.cnf  uuf150-011.cnf  uuf150-012.cnf  uuf150-013.cnf  uuf150-014.cnf  uuf150-015.cnf  uuf150-016.cnf  uuf150-017.cnf  uuf150-018.cnf  uuf150-019.cnf  uuf150-020.cnf  uuf150-021.cnf  uuf150-022.cnf  uuf150-023.cnf  uuf150-024.cnf  uuf150-025.cnf  uuf150-026.cnf  uuf150-027.cnf  (+3 more)
crates/bounded/: Cargo.toml
crates/bounded/benches/: bench.rs
crates/bounded/src/: bounded_array.rs  bounded_bitmap.rs  bounded_heap.rs  bounded_map.rs  bounded_quadmap.rs  bounded_stack.rs  lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/solver/: Cargo.toml
crates/solver/benches/: bench.rs  clause_db.rs  solve.rs
crates/solver/src/: builder.rs  decider.rs  lib.rs  literal.rs  literal_chunk.rs  sanitizer.rs  tests.rs
crates/solver/src/assignment/: first_uip_learning.rs  mod.rs  model.rs  partial.rs  trail.rs  watch_list.rs
crates/solver/src/clause_db/: clause.rs  clause_builder.rs  clause_ref.rs  db.rs  impls.rs  iter.rs  mod.rs  resolved.rs  tests.rs  words.rs
crates/solver/src/clause_db2/: db.rs  impls.rs  iter.rs  mod.rs  resolved.rs
crates/solver/src/utils/: bounded_array.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  slice_cast.rs
src/: assignment.rs  builder.rs  clause_db.rs  decider.rs  lib.rs  literal.rs  literal_chunk.rs  occurrence_map.rs  propagator.rs  tests.rs
src/assignment/: literal.rs  mod.rs  model.rs  watch_list.rs
src/assignment2/: mod.rs  model.rs  trail.rs  watch_list.rs
src/clause_db/: clause.rs  clause_ref.rs  db.rs  mod.rs
src/utils/: bounded_array.rs  bounded_bitmap.rs  bounded_heap.rs  bounded_map.rs  bounded_stack.rs  mod.rs
