[package]
name = "super-simple-sat"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/s3-sat-solver"
documentation = "https://docs.rs/s3-sat-solver"
keywords = ["sat", "sat-solving"]
description = """A super simple implementation of a SAT solver."""
categories = ["algorithms", "science"]

[dependencies]
cnf-parser = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
