[package]
name = "s3sat-driver"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/s3-sat-solver"
documentation = "https://docs.rs/s3-sat-solver"
keywords = ["cli"]
description = """Command line interface for the super-simple-sat solver."""
categories = ["cli"]

[dependencies]
solver = { version = "0.1.0", path = "../solver/", package = "s3sat-solver" }
structopt = "0.3"
