[package]
name = "s3sat-solver"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/s3-sat-solver"
documentation = "https://docs.rs/s3-sat-solver"
keywords = ["sat", "sat-solving"]
description = """A super simple implementation of a SAT solver."""
categories = ["algorithms", "science"]

[dependencies]
bounded = { version = "0.1", path = "../bounded/", package = "bounded_collections" }
utils = { version = "0.1", path = "../utils", package = "s3sat-utils" }
cnf-parser = "0.1"
ahash = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
