[package]
name = "s3sat-utils"
version = "0.1.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/s3-sat-solver"
documentation = "https://docs.rs/s3-sat-solver"
keywords = ["sat", "sat-solving"]
description = """Utility definitions for the S3 SAT solver."""
categories = ["algorithms", "science"]
